# Qoder-Switch

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: check_chats.rs
src-tauri/src/: account_pool.rs  chat.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  metrics.rs  process.rs  quota.rs  state.rs  tray.rs
src-tauri/src/auth/: cosy.rs  mod.rs  token.rs
src-tauri/src/commands/: account_cmd.rs  cert_cmd.rs  chat_cmd.rs  config_cmd.rs  mod.rs  proxy_cmd.rs  quota_cmd.rs
src-tauri/src/proxy/: cert.rs  handler.rs  mod.rs  server.rs
src/components/: AccountForm.vue  AccountList.vue  ChatHistoryPanel.vue  ConfigPanel.vue  DomainsPanel.vue  GuidePanel.vue  LogsPanel.vue  MetricsPanel.vue  NavItem.vue  QuotaPanel.vue  SettingsPanel.vue  StatusBar.vue  Step.vue
src/i18n/: en.ts  index.ts  zh.ts
src/stores/: app.ts
