[package]
name = "qoder-proxy"
version = "1.0.4"
edition = "2021"

[lib]
name = "qoder_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hudsucker = { version = "0.24.1", features = ["rcgen-ca", "rustls-client"] }
hyper = { version = "1", features = ["full"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
aes-gcm = "0.10"
sha2 = "0.10"
rsa = "0.9"
md-5 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rcgen = "0.14"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
chrono = "0.4"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.31"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58.0", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
